New Kiibsii Shop

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
     <center>
         <h1 class="topic">Kiibsii Shop</h1>
-        <span>รายการตุ๊กตามูมิน</span>
+        <h4>รายการตุ๊กตามูมิน</h4>
     </center>
     <div class="menu">
         <h2>Munu by Kiibsii Shop</h2>
